--- a/index.html
+++ b/index.html
@@ -396,8 +396,7 @@ function loglevel(el, replace)
                   </h2>
                </div>
                <div id="commenteditbody" class="uk-modal-body" uk-margin>
-                  <div id="commenteditpreview">
-                  </div>
+                  <div id="commenteditpreview"></div>
                   <div class="editor" uk-margin>
                      <label><span>Format : </span>
                         <select id="commenteditformat" class="uk-select">
@@ -416,6 +415,7 @@ function loglevel(el, replace)
                      <p class="uk-text-meta">Note: you may not have permission
                         to edit or delete every comment</p>
                   </div>
+                  <div id="commenteditinfo" class="uk-text-meta"></div>
                </div>
             </div>
          </div>
@@ -511,7 +511,7 @@ function loglevel(el, replace)
             </div>
          </div>
          <div tabindex="2" data-singlemessage data-messageid="" data-id="id" 
-            data-createdate="" class="uk-flex">
+            data-createdate="" data-editdate="" class="uk-flex">
             <div data-message=".renderComment" class="uk-width-expand uk-text-break"></div>
             <a href="#" class="messagecontrol" uk-toggle="target: #commentedit" uk-icon="cog"></a>
          </div>
