--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
       <script src="libbo.js?v=1597301532"></script>
+      <script src="dom.js?v=1597301532"></script>
       <script src="index.js?v=1597301532"></script>
       <script src="sbs2-markup/highlight.js?v=123"></script>
       <script src="sbs2-markup/parse.js?v=123"></script>
@@ -61,7 +62,8 @@ function loglevel(el, replace)
               "uk-width-expand uk-flex uk-flex-column uk-height-1-1 uk-overflow-hidden">
                <!-- LOC:MAINCONTENT -->
                <div id="maincontentcontainer" class="uk-inline" uk-overflow-auto>
-                  <div id="maincontentloading" class="uk-cover" uk-spinner="ratio: 2" hidden></div>
+                  <!--<div id="maincontentloading" class="uk-cover"
+                     uk-spinner="ratio: 2" hidden></div>-->
                   <div id="maincontent">
                   </div>
                </div>
