Moving even more stuff out, api.js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <!-- LOC:SCRIPT -->
       <script src="libbo.js?v=1597301532"></script>
       <script src="dom.js?v=1597301532"></script>
+      <script src="api.js?v=1597301532"></script>
       <script src="index.js?v=1597301532"></script>
       <script src="sbs2-markup/highlight.js?v=123"></script>
       <script src="sbs2-markup/parse.js?v=123"></script>
