Broken things, loading stacking

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@ function loglevel(el, replace)
               "uk-width-expand uk-flex uk-flex-column uk-height-1-1 uk-overflow-hidden">
                <!-- LOC:MAINCONTENT -->
                <div id="maincontentcontainer" class="uk-inline" uk-overflow-auto>
-                  <!--<div id="maincontentloading" class="uk-cover"
-                     uk-spinner="ratio: 2" hidden></div>-->
+                  <div id="maincontentloading" class="uk-position-top-left"></div>
                   <div id="maincontent">
                   </div>
                </div>
