--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1597301532"></script>
-      <script src="dom.js?v=1597301532"></script>
-      <script src="api.js?v=1597301532"></script>
-      <script src="index.js?v=1597301532"></script>
-      <script src="sbs2-markup/highlight.js?v=123"></script>
-      <script src="sbs2-markup/parse.js?v=123"></script>
-      <script src="sbs2-markup/render.js?v=123"></script>
+      <script src="libbo.js?v=1600155530"></script>
+      <script src="dom.js?v=1600155530"></script>
+      <script src="api.js?v=1600155530"></script>
+      <script src="index.js?v=1600155530"></script>
+      <script src="sbs2-markup/highlight.js?v=1600155530"></script>
+      <script src="sbs2-markup/parse.js?v=1600155530"></script>
+      <script src="sbs2-markup/render.js?v=1600155530"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1597301532" />
+      <link rel="stylesheet" href="index.css?v=1600155530" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
