expanding chat textbox

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ function loglevel(el, replace)
                   </div>
                   <div id="postarea" class="uk-inline" data-utgl hidden>
                      <textarea id="postdiscussiontext" 
-                        class="uk-flex-1 uk-textarea uk-width-expand uk-height-1-1"></textarea>
+                        class="uk-flex-1 uk-textarea uk-width-expand"></textarea>
                      <a href="#" uk-toggle="target: #fileupload" uk-icon="image"
                         class="uk-position-bottom-right" id="discussionimageselect"></a>
                   </div>
