Kind of working long polling

--- a/index.html
+++ b/index.html
@@ -628,6 +628,8 @@ function loglevel(el, replace)
       </div>
       <!-- LOC:MEMORY -->
       <div id="memory" style="display: none">
+         <div id="discussionmemory">
+         </div>
       </div>
    </body>
 </html>
