Fixed various bugs created from rewrite

--- a/index.html
+++ b/index.html
@@ -535,22 +535,22 @@ function loglevel(el, replace)
          <a data-sbslink data-link="href" data-spa>
          </a>
          <div data-booloption>
-            <label> 
+            <label> <!-- data-name="uk-tooltip"> -->
                <input data-input=".checked" type="checkbox" class="uk-checkbox uk-margin-right">
-               <span data-text=".textContent"></span>
+               <span data-text=".textContent" data-name="uk-tooltip"></span>
             </label>
          </div>
          <div data-numberoption>
-            <label> 
+            <label> <!-- data-name="uk-tooltip"> -->
                <input data-input=".value" type="number" data-step="step"
                   class="uk-input uk-margin-small-right uk-width-1-4">
-               <span data-text=".textContent"></span>
+               <span data-text=".textContent" data-name="uk-tooltip"></span>
             </label>
          </div>
          <div data-rawoption>
-            <label> 
+            <label> <!-- data-name="uk-tooltip"> -->
                <input data-input=".value" class="uk-input uk-margin-small-right uk-width-1-2">
-               <span data-text=".textContent"></span>
+               <span data-text=".textContent" data-name="uk-tooltip"></span>
             </label>
          </div>
          <a data-discussionuser class="nocontainer" data-userlink="href" data-spa>
