Mostly working outer scroll snap

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@ function loglevel(el, replace)
                      <!-- Swap the discussions in and out of here -->
                   </div>
                   <div id="postarea" class="uk-inline" data-utgl hidden>
+                     <!--<div id="postdiscussiontext"  role="textarea" contenteditable
+                        class="input uk-flex-1 uk-textarea uk-width-expand"></div>-->
                      <textarea id="postdiscussiontext" 
                         class="uk-flex-1 uk-textarea uk-width-expand"></textarea>
                      <a href="#" uk-toggle="target: #fileupload" uk-icon="image"
