--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@ function loglevel(el, replace)
             </div>
             <div data-loadolder class="uk-position-top-right uk-margin-small-right">
                <div data-loading uk-spinner="ratio: 0.5" hidden></div>
-               <a href="#" data-loadmore class="uk-text-meta" hidden>Load older</a>
+               <a href="#" data-loadmore class="uk-text-meta">Load older</a>
             </div>
          </div>
          <!--<li data-discussionswitch data-id="id">
