Fixed some long-standing dark mode issues

--- a/index.html
+++ b/index.html
@@ -365,17 +365,17 @@ function loglevel(el, replace)
                   </h2>
                </div>
                <div id="fileuploadbody" class="uk-modal-body">
-                  <h3 class="uk-heading-divider"><span>Upload</span></h3>
+                  <!--<h3 class="uk-heading-divider"><span>Upload</span></h3>-->
                   <div id="fileuploadform" class="uk-placeholder uk-text-center">
                      <span uk-icon="icon: cloud-upload"></span>
                      <span class="uk-text-middle">Drop images or</span>
                      <div uk-form-custom>
                         <input type="file">
-                        <span class="uk-link">select one</span>
+                        <span class="uk-link">choose from device</span>
                      </div>
                   </div>
                   <progress id="fileuploadprogress" class="uk-progress" value="0" max="100" hidden></progress>
-                  <span class="uk-text-meta uk-display-block">After upload, your image will appear below</span>
+                  <span class="uk-text-meta uk-display-block">After upload, image appears below</span>
                   <h3 class="uk-heading-divider uk-flex uk-flex-bottom">
                      <span class="uk-width-expand">Select</span>
                      <label class="uk-text-small uk-flex-none">
